Update: 添加回合开始面板、手牌数UI、3s提示系统、修复黑屏叠加问题

--- a/约定.md
+++ b/约定.md
@@ -1,6 +1,138 @@
 ## 交互与动画约定
 
 - 一切动画都要基于真实物理的模拟
+- **禁止克隆元素做动画**：所有动画必须直接在原始DOM元素上执行，不允许使用 `cloneNode()` 创建副本来做动画。原因：
+  - 避免不必要的DOM操作和内存开销
+  - 简化代码逻辑，减少状态同步问题
+  - 提高性能和可维护性
+
+## 坐标系统与尺寸约定
+
+### 关键原则
+
+- **"屏幕"的定义**：在本项目中，所有提到"屏幕"的地方指的是 `.tableBg` 背景图的可视区域，而不是浏览器窗口。
+- **坐标系统**：所有动画、定位、飞行轨迹都应相对于 `.tableBg` 的边界和中心进行计算。
+- **自适应原则**：卡牌大小、飞行距离、特效范围都应根据 `.tableBg` 的实际尺寸自适应缩放。
+
+### .tableBg 背景图规格
+
+- **CSS设置**：
+  - `max-width: 880px`
+  - `aspect-ratio: 5501 / 2552`
+  - `margin: 0 auto`（水平居中）
+- **实际尺寸**：动态（根据窗口宽度自适应，但不超过 880px）
+- **背景图文件**：`./assets/table.png`（5501×2552 像素）
+
+### 特效与动画的坐标基准
+
+#### 1. 大王卡（Joker）粒子凝聚特效
+
+- **覆盖范围**：应限制在 `.tableBg` 区域内，而非全屏
+- **黑屏背景**：应使用 `.tableBg` 的边界和尺寸
+- **粒子系统**：Three.js 画布应匹配 `.tableBg` 的尺寸和位置
+- **卡牌大小**：根据 `.tableBg` 的实际宽度按比例缩放
+
+#### 2. 飞行动画的坐标计算
+
+- **起点**：`.tableBg` 的中心点（而非 `window.innerWidth / 2`）
+- **终点**：目标玩家手牌区域（已经是相对于 `.tableBg` 的百分比定位）
+- **弧线控制点**：基于 `.tableBg` 的尺寸计算弧线高度
+
+#### 3. 手牌区域定位
+
+所有手牌区域（`.zone-top`, `.zone-left`, `.zone-right`, `.zone-bottom`, `.zone-center`）都使用百分比定位，相对于 `.tableBg`：
+
+```css
+.zone-top    { left: 33%; top: 2.5%; width: 34%; height: 22%; }
+.zone-left   { left: 0.5%; top: 29%; width: 27%; height: 42%; }
+.zone-right  { left: 72.5%; top: 29%; width: 27%; height: 42%; }
+.zone-bottom { left: 20%; top: 72.5%; width: 60%; height: 25%; }
+.zone-center { left: 30%; top: 34.5%; width: 40%; height: 24%; }
+```
+
+### 卡牌尺寸规格
+
+#### 1. 基础尺寸（CSS 中定义）
+
+**玩家手牌（`.faceCard`）**：
+- 基础宽度：`--base-width: 86px`
+- 基础高度：`--base-height: 124px`
+- 宽高比：约 1:1.44
+- 圆角半径：`border-radius: 16px`
+- 默认缩放：`--scale-player-card: 0.85`
+- 实际显示尺寸：73px × 105px（86 × 0.85 / 124 × 0.85）
+- 实际圆角：13.6px（16 × 0.85）
+
+**AI 手牌背面（`.miniBack`）**：
+- 基础尺寸：52px × 72px
+- 宽高比：约 1:1.38
+- 基础圆角：`border-radius: 8px`（调整为与玩家卡牌视觉比例一致）
+
+**AI 上家手牌（`.zone-top .miniBack`）**：
+- 基础尺寸：52px × 72px
+- 默认缩放：`--scale-ai-top-card: 1.29`
+- 实际显示尺寸：67px × 93px（52 × 1.29 / 72 × 1.29）
+- 圆角半径：`calc(8px * var(--scale-ai-top-card, 1))`
+- 实际圆角：10.3px（8 × 1.29）
+- 圆角占比：约 15%（10.3 / 67）
+
+**AI 左右家手牌（`.zone-left .miniBack`, `.zone-right .miniBack`）**：
+- 基础尺寸：52px × 72px
+- 默认缩放：`--scale-ai-side-card: 1.25`
+- 实际显示尺寸：65px × 90px（52 × 1.25 / 72 × 1.25）
+- 圆角半径：`calc(10px * var(--scale-ai-side-card, 1))`
+- 实际圆角：12.5px（10 × 1.25）
+- 圆角占比：约 19%（12.5 / 65）
+
+**弃牌堆卡牌（`.zone-center .faceCard`）**：
+- 基础尺寸：继承自 `.faceCard`（86px × 124px）
+- 默认缩放：`--scale-discard-pile: 0.82`
+- 实际显示尺寸：71px × 102px（86 × 0.82 / 124 × 0.82）
+- 实际圆角：13.1px（16 × 0.82）
+
+#### 2. 视觉一致性原则
+
+- **圆角比例**：为保证不同大小卡牌的视觉一致性，圆角半径需根据卡牌实际显示尺寸调整
+  - 玩家手牌：13.6px / 73px ≈ 19%
+  - AI 上家：10.3px / 67px ≈ 15%（略小，更锐利）
+  - AI 左右家：12.5px / 65px ≈ 19%（与玩家接近）
+
+- **宽高比**：所有卡牌保持相近的宽高比（约 1:1.4），确保视觉协调
+
+- **缩放基准**：所有尺寸使用 CSS 变量控制，可通过布局调参面板实时调整
+
+#### 3. 抽牌界面卡牌（`.drawBack`）
+
+- 基础尺寸：58px × 82px
+- 无额外缩放（固定尺寸）
+- 圆角：8px
+- 用途：玩家从上家抽牌时的临时展示区域
+
+#### 4. UI 按钮尺寸
+
+- 默认缩放：`--scale-ui-buttons: 0.84`
+- 三个操作按钮（提示/配对/结束回合）使用图片资源，按比例缩放
+- 位置可通过布局调参面板调整（百分比定位）
+
+### 坐标转换公式
+
+```javascript
+// 获取 .tableBg 的边界矩形
+const tableBg = document.querySelector('.tableBg');
+const tableBgRect = tableBg.getBoundingClientRect();
+
+// .tableBg 的中心点（真实的"屏幕中心"）
+const centerX = tableBgRect.left + tableBgRect.width / 2;
+const centerY = tableBgRect.top + tableBgRect.height / 2;
+
+// .tableBg 的实际尺寸
+const tableWidth = tableBgRect.width;
+const tableHeight = tableBgRect.height;
+
+// 相对定位百分比转绝对坐标
+const absoluteX = tableBgRect.left + (percentX / 100) * tableWidth;
+const absoluteY = tableBgRect.top + (percentY / 100) * tableHeight;
+```
 
 ## 玩家手牌拖拽（桌面端 / Pointer Events）
 
